確認画面などの大まかなUI調整

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
         <section class="subjects">
             <h2>教科を選んでクイズに挑戦しよう！</h2>
             <div class="subject-grid">
-                <a href="quiz.html?subject=math" class="subject-card math">
+                <a href="select-unit.html?subject=math" class="subject-card math">
                     <div class="subject-icon">📐</div>
                     <h3>数学</h3>
                     <p>計算・方程式・図形</p>
                 </a>
-                <a href="quiz.html?subject=japanese" class="subject-card japanese">
+                <a href="select-unit.html?subject=japanese" class="subject-card japanese">
                     <div class="subject-icon">📖</div>
                     <h3>国語</h3>
                     <p>漢字・文法・読解</p>
                 </a>
-                <a href="quiz.html?subject=english" class="subject-card english">
+                <a href="select-unit.html?subject=english" class="subject-card english">
                     <div class="subject-icon">🌐</div>
                     <h3>英語</h3>
                     <p>単語・文法・長文</p>
                 </a>
-                <a href="quiz.html?subject=science" class="subject-card science">
+                <a href="select-unit.html?subject=science" class="subject-card science">
                     <div class="subject-icon">🔬</div>
                     <h3>理科</h3>
                     <p>物理・化学・生物・地学</p>
                 </a>
-                <a href="quiz.html?subject=social" class="subject-card social">
+                <a href="select-unit.html?subject=social" class="subject-card social">
                     <div class="subject-icon">🌍</div>
                     <h3>社会</h3>
                     <p>地理・歴史・公民</p>
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Navia - 楽しく学ぼう！</p>
+        <p>Navia v1.0.0</p>
     </footer>
 </body>
 </html>
