--- a/quiz.html
+++ b/quiz.html
@@ -53,7 +53,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 Navia - 楽しく学ぼう！</p>
+        <p>Navia v1.0.0</p>
     </footer>
 
     <script src="data/questions.js"></script>
