--- a/select-unit.html
+++ b/select-unit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
     <title>単元選択 - Navia</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -29,7 +30,7 @@
         <p>Navia v1.0.0</p>
     </footer>
 
-    <script src="data/questions.js"></script>
+    <script src="data/questions.js?v=1.1"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const params = new URLSearchParams(window.location.search);
